<resources>
    <string name="app_name">Assignment</string>
    <string name="student_name">Student Name</string>
    <string name="email_id">Email ID</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="proceed">proceed</string>
    <string name="_20_01_2001">20/01/2001</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>